--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,19 +19,11 @@ jobs:
         with:
           go-version: "1.24"
 
-      - name: Build Windows Binary
+      - name: Install Goreleaser
         run: |
-          mkdir -p build
-          GOOS=windows GOARCH=amd64 go build -o build/quickssh.exe
+          curl -sL https://git.io/goreleaser | bash
 
-      - name: Zip Binary
-        run: |
-          cd build
-          zip quickssh-windows-amd64.zip quickssh.exe
-
-      - name: Create Release and Upload Asset
-        uses: softprops/action-gh-release@v2
-        with:
-          files: build/quickssh-windows-amd64.zip
+      - name: Run Goreleaser
+        run: goreleaser release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
