--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,7 @@ jobs:
           go-version: "1.24"
 
       - name: Install Goreleaser
-        run: |
-          curl -sL https://git.io/goreleaser | bash
+        run: go install github.com/goreleaser/goreleaser/v2@ubuntu-latest
 
       - name: Run Goreleaser
         run: goreleaser release --rm-dist
