--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,6 @@ jobs:
         run: go install github.com/goreleaser/goreleaser/v2@latest
 
       - name: Run Goreleaser
-        run: goreleaser release --rm-dist
+        run: goreleaser release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
