--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,10 @@ jobs:
           go-version: "1.24"
 
       - name: Install Goreleaser
-        run: go install github.com/goreleaser/goreleaser/v2@latest
+        run: |
+          echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
+          sudo apt update
+          sudo apt install goreleaser
 
       - name: Run Goreleaser
         run: goreleaser release
