--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GORELEASER_PAT: ${{ secrests.GORELEASER_PAT }}
+          GORELEASER_PAT: ${{ secrets.GORELEASER_PAT }}
